deposit field done

--- a/Bank.html
+++ b/Bank.html
@@ -21,15 +21,15 @@
         >
           <div class="bg-green-400 py-5 rounded-3xl text-center">
             <h4 class="text-2xl">Deposit</h4>
-            <h2 class="text-5xl">$00</h2>
+            <h2 class="text-5xl" >$<span id="deposit-current">00</span></h2>
           </div>
           <div class="bg-yellow-500 py-5 rounded-3xl text-center">
             <h4 class="text-2xl font-semibold">Withdraw</h4>
-            <h2 class="text-5xl">$00</h2>
+            <h2 class="text-5xl" >$ <span id="withdraw-current">100</span></h2>
           </div>
           <div class="bg-violet-700 py-5 rounded-3xl text-center">
             <h4 class="text-2xl">Belance</h4>
-            <h2 class="text-5xl">$1200</h2>
+            <h2 class="text-5xl" >$<span id="belance-total">1200</span></h2>
           </div>
         </div>
       </section>
@@ -51,7 +51,7 @@
                 id="btn-deposit"
                 class="bg- px-4 py-2 my-2 rounded-xl bg-lime-300 text-black font-semibold hover:bg-lime-500 hover:text-red-700"
               >
-                Submit
+                Deposit
               </button>
             </div>
           </div>
@@ -66,9 +66,9 @@
               />
               <button
                 id="btn-withdrow"
-                class="bg- px-4 py-2 my-2 rounded-xl bg-lime-300 text-black font-semibold hover:bg-lime-500 hover:text-red-700"
+                class="bg- px-4 py-2 my-2 rounded-xl bg-lime-300 text-red-600 font-semibold hover:bg-lime-500 hover:text-red-700"
               >
-                Submit
+                Withdrow
               </button>
             </div>
           </div>
